--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
   <header>
     <h1>riso wordart!</h1>
+    <p>a tiny project by Heidi Dong as a part of <a href="https://www.instagram.com/kellianderson/" target="_blank">@kellianderson</a>’s animation class at <a href="https://risolab.sva.edu/" target="_blank">SVA RisoLAB</a></p>
   </header>
+
 
 <div id="container">
 
